force-app/main/default/objects/Forecast_Comment__c/Forecast_Comment__c.object-meta.xml
<CustomObject>
    <description>Comments and notes associated with forecast overrides, periods, and opportunities.</description>
    <label>Forecast Comment</label>
    <nameField><label>Forecast Comment Name</label><type>AutoNumber</type><displayFormat>FC-{00000}</displayFormat></nameField>
    <pluralLabel>Forecast Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>