force-app/main/default/objects/Forecast_Comment__c/fields/Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Type__c</fullName>
    <label>Comment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Note</fullName><default>false</default><label
        >Note</label></value>
            <value><fullName>Governance_Justification</fullName><default
        >false</default><label>Governance_Justification</label></value>
            <value><fullName>Override_Reason</fullName><default
        >false</default><label>Override_Reason</label></value>
            <value><fullName>Category_Change_Reason</fullName><default
        >false</default><label>Category_Change_Reason</label></value>
            <value><fullName>System_Event</fullName><default
        >false</default><label>System_Event</label></value>
            <value><fullName>Escalation</fullName><default>false</default><label
        >Escalation</label></value>
            <value><fullName>Question</fullName><default>false</default><label
        >Question</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>