force-app/main/default/objects/Forecast_Comment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Forecast Comments</relationshipLabel>
    <relationshipName>Forecast_Comments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>