force-app/main/default/objects/Forecast_Comment__c/fields/Parent_Comment__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comment__c</fullName>
    <label>Parent Comment</label>
    <type>Lookup</type>
    <referenceTo>Forecast_Comment__c</referenceTo>
    <relationshipLabel>Replies</relationshipLabel>
    <relationshipName>Replies</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>