force-app/main/default/objects/Forecast_Comment__c/fields/Related_Governance_Event__c.field-meta.xml
<CustomField>
    <fullName>Related_Governance_Event__c</fullName>
    <label>Related Governance Event</label>
    <type>Lookup</type>
    <referenceTo>Governance_Event__c</referenceTo>
    <relationshipLabel>Related Comments</relationshipLabel>
    <relationshipName>Related_Comments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>